[gd_scene load_steps=5 format=3 uid="uid://decli4dnrpx42"]

[ext_resource type="Script" uid="uid://5i8s8njak5j3" path="res://Scripts/LevelLogic/LevelSwitcher.gd" id="1_jfxaf"]
[ext_resource type="AudioStream" uid="uid://cr4bfn051tkfs" path="res://Assets/Audio/Win1.mp3" id="3_d7mvd"]
[ext_resource type="AudioStream" uid="uid://cpe2vuf5wyk74" path="res://Assets/Audio/UIClick.mp3" id="4_bnxj2"]
[ext_resource type="FontFile" uid="uid://dpge436uj6kg4" path="res://Assets/Text/VCR_OSD_MONO_1.001.ttf" id="4_jfxaf"]

[node name="LevelSwitcher" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jfxaf")

[node name="BGAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_d7mvd")
autoplay = true

[node name="ButtonClickPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_bnxj2")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.0
offset_top = -111.0
offset_right = 142.0
offset_bottom = 111.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CenterContainer"]
custom_minimum_size = Vector2(350, 350)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_jfxaf")
theme_override_font_sizes/font_size = 64
text = "YOU WIN!"

[node name="Continue" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 75)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_jfxaf")
theme_override_font_sizes/font_size = 32
text = "CONTINUE"

[node name="PlayAgain" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 75)
layout_mode = 2
theme_override_fonts/font = ExtResource("4_jfxaf")
theme_override_font_sizes/font_size = 32
text = "PLAY AGAIN"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/PlayAgain" to="." method="_on_PlayAgain_pressed"]
